@@ -18,10 +18,15 @@
 package org.apache.flink.agents.plan;
 
 import org.apache.flink.agents.api.InputEvent;
+import org.apache.flink.agents.api.OutputEvent;
+import org.apache.flink.shaded.jackson2.com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 /** Test Action. */
 public class TestAction {
@@ -29,27 +34,49 @@ public class TestAction {
 
     public static void illegal(int a, int b) {}
 
+//    @Test
+//    public void testActionSignatureLegal() throws Exception {
+//        Function func =
+//                new JavaFunction(
+//                        "org.apache.flink.agents.plan.TestAction",
+//                        "legal",
+//                        new Class[] {InputEvent.class});
+//
+//        new Action("legal", func, List.of(InputEvent.class));
+//    }
+//
+//    @Test
+//    public void testActionSignatureIllegal() throws Exception {
+//        Function func =
+//                new JavaFunction(
+//                        "org.apache.flink.agents.plan.TestAction",
+//                        "illegal",
+//                        new Class[] {int.class, int.class});
+//
+//        Assertions.assertThrows(
+//                IllegalArgumentException.class,
+//                () -> new Action("illegal", func, List.of(InputEvent.class)));
+//    }
+
     @Test
-    public void testActionSignatureLegal() throws Exception {
-        Function func =
+    public void testActionSerializable() throws Exception {
+        JavaFunction func =
                 new JavaFunction(
                         "org.apache.flink.agents.plan.TestAction",
                         "legal",
                         new Class[] {InputEvent.class});
 
-        new Action("legal", func, List.of(InputEvent.class));
-    }
+        Action action = new Action("legal", func, List.of(InputEvent.class));
+        ObjectMapper mapper = new ObjectMapper();
+        String value = mapper.writeValueAsString(action);
+        Action serializedAction = mapper.readValue(value, Action.class);
+        Assertions.assertEquals(action, serializedAction);
 
-    @Test
-    public void testActionSignatureIllegal() throws Exception {
-        Function func =
-                new JavaFunction(
-                        "org.apache.flink.agents.plan.TestAction",
-                        "illegal",
-                        new Class[] {int.class, int.class});
-
-        Assertions.assertThrows(
-                IllegalArgumentException.class,
-                () -> new Action("illegal", func, List.of(InputEvent.class)));
+        Map<String, List<Action>> actions = new HashMap<>();
+        actions.put("org.apache.flink.agents.api.InputEvent", Collections.singletonList(action));
+        WorkflowPlan plan = new WorkflowPlan(actions);
+        String planJson = mapper.writeValueAsString(plan);
+        System.out.println(planJson);
+        WorkflowPlan plan1 = mapper.readValue(planJson, WorkflowPlan.class);
     }
 }
